# bitos

./: Cargo.toml
bitos/: Cargo.toml
bitos/src/: lib.rs
bitos_core/: Cargo.toml
bitos_core/src/: integer.rs  lib.rs
bitos_macro/: Cargo.toml
bitos_macro/examples/: enum.rs  struct.rs
bitos_macro/src/: lib.rs
bitos_macro_core/: Cargo.toml
bitos_macro_core/src/: common.rs  enum_.rs  lib.rs  struct_.rs
